# ShadowAI

./: .gitignore  LICENSE  README.md  README.ru.md  package-lock.json  package.json
electron-app/: main.js  overlay-preload.js  preload.js
electron-app/core/shortcuts/: registerShortcuts.js
electron-app/core/windows/: overlay.js  settings.js
electron-app/icon/: icon.icns
electron-app/modules/: callSession.js  recorder.js  screenshot.js  telegram.js
electron-app/renderer/: index.html  overlay.html  package-lock.json  package.json  vite.config.ts
electron-app/renderer/src/: App.tsx  i18n.ts  index.css  ipcBridge.ts  main.tsx  overlay.css  overlay.tsx  preload.d.ts
electron-app/renderer/src/components/: Layout.css  Layout.tsx  LogListener.tsx
electron-app/renderer/src/pages/: AuthPage.module.css  ExitPage.tsx  FAQPage.module.css  FAQPage.tsx  HidePage.tsx  HomePage.css  HomePage.tsx  LogPage.module.css  LogPage.tsx  ProfilePage.module.css  SessionPage.module.css  SessionPage.tsx  SettingsPage.module.css  SettingsPage.tsx
electron-app/renderer/src/store/: useLogStore.ts
electron-app/renderer/src/utils/: log.ts
electron-app/utils/: constants.js  context.js  localWhisper.js  logger.js  ocr.js  openaiClient.js  overlayEffect.js  overlayMessenger.js  sessionPrompts.js  timer.js  vad.js
native/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
native/src/: lib.rs
